[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "githubcopilotkit"
version = "0.0.1"
description = "A Python toolkit for GitHub Copilot integration"
readme = "README.md"
license = {text = "AGPL-3.0"}
authors = [{name="matixandr", email="matixandr09@gmail.com"}]
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/matixandr/github-copilot-api"